<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bobcode.splitexpense.activities.AllAccountsActivity">

    <item
        android:id="@+id/action_add_account"
        android:title="@string/action_add_account"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_add_account"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_members"
        android:title="@string/action_members"
        android:orderInCategory="200"
        android:icon="@drawable/ic_menu_members"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_report"
        android:title="@string/action_report"
        android:orderInCategory="300"
        android:icon="@drawable/ic_menu_report"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="400"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="500"
        app:showAsAction="never" />


</menu>
