<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bobcode.splitexpense.activities.AllEventsActivity">

    <item
        android:id="@+id/action_report"
        android:title="@string/action_report"
        android:orderInCategory="100"
        android:icon="@drawable/ic_menu_report"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="400"
        app:showAsAction="never" />

</menu>
