<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.bobcode.splitexpense.activities.AddOREditAccountActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:icon="@drawable/abc_ic_menu_moreoverflow_mtrl_alpha"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="200"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="300"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tick"
        android:title="@string/action_tick"
        android:orderInCategory="500"
        android:icon="@drawable/ic_action_tick"
        app:showAsAction="always" />

</menu>
