<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:layout_marginTop="5dp"
    android:background="@color/windowBackground"
    android:elevation="18dp"
    card_view:cardElevation="5dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/windowBackground">

        <!-- ______________________Account Name_____________________-->
        <TextView
            android:id="@+id/allAccountAccountName"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_centerHorizontal="true"
            android:background="@color/primary_dark"
            android:gravity="center"
            android:textColor="@color/text_icons"
            android:textSize="20sp"
            android:textStyle="bold" />
        <!--android:text="March 2015"-->

        <!-- ______________________Members_____________________-->
        <TextView
            android:id="@+id/allAccountMembersLabel"
            style="@style/textViewHeaderPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/allAccountAccountName"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/account_members_label" />

        <TextView
            android:id="@+id/allAccountMembers"
            style="@style/textViewHeaderPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/allAccountMembersLabel"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp" />
        <!--android:text="Vijayan, Senthil, Amitesh, Venky, Vijay Sridhar, Shanmugam"-->
        <!-- ______________________Description_____________________-->

        <TextView
            android:id="@+id/allAccountDescriptionLabel"
            style="@style/textViewHeaderPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/allAccountMembers"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/account_description_label" />

        <TextView
            android:id="@+id/allAccountDescription"
            style="@style/textViewHeaderPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/allAccountDescriptionLabel"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="2dp" />
        <!-- android:text="Feb Room monthly expense" -->

        <!-- ______________________Created On & No of expenses (labels)_____________________-->
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/allAccountDescription"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/allAccountCreatedOnLabel"
                style="@style/textViewHeaderPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_created_on_label" />

            <TextView
                android:id="@+id/allAccountNoOfExpensesLabel"
                style="@style/textViewHeaderPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/account_no_of_expenses_label" />

        </LinearLayout>

        <!-- ______________________Created On & No of expenses (data)_____________________-->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/allAccountCreatedOn"
                style="@style/textViewHeaderPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1" />
            <!-- android:text="Wednesday, August 02 2015"-->

            <TextView
                android:id="@+id/allAccountNoOfExpenses"
                style="@style/textViewHeaderPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:gravity="right" />
            <!-- android:text="87" -->
        </LinearLayout>


        <!-- ______________________Total Spend & Expense Status (Label)_____________________-->
        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/allAccountTotalSpendLabel"
                style="@style/textViewHeaderPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/account_total_spend_label" />

            <TextView
                android:id="@+id/allAccountExpenseStatusLabel"
                style="@style/textViewHeaderPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/account_expense_status_label" />

        </LinearLayout>

        <!-- ______________________Total Spend & Expense Status (Data)_____________________-->
        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/currencyImage"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp" />

                <TextView
                    android:id="@+id/allAccountTotalSpend"
                    style="@style/textViewHeaderPrimaryText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp" />
                <!-- android:text="1019" -->
            </LinearLayout>

            <TextView
                android:id="@+id/allAccountExpenseStatus"
                style="@style/textViewHeaderPrimaryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right" />
            <!-- android:text="Active"-->

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout4"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="4dp">

            <ImageView
                android:id="@+id/imgAddEvent"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_add_an_event_red" />

            <ImageView
                android:id="@+id/imgAllEvents"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_view_all_events_red" />

            <ImageView
                android:id="@+id/imgEditAccountDetail"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_edit_account_details_red" />

            <ImageView
                android:id="@+id/imgDeleteAccount"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_delete_red" />
        </LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>
